# chat-app-basic

./: README.md
backend_node/: .gitignore  README.md  VALIDACAO_MENSAGENS.md  package-lock.json  package.json  server.ts  tsconfig.json
backend_python/: .gitignore  LOGGING_GUIDE.md  README.md  VALIDATION_GUIDE.md  main.py  pyproject.toml  schemas.py  test_validation.py  validation_examples.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
